# vic

./: .gitignore  Cargo.toml  Dockerfile  INTERNALS  Makefile  README.md
.github/workflows/: release.yml  test.yml
chafa-sys/: Cargo.toml  README.md  build.rs  wrapper.h
chafa-sys/src/: bindings.rs  lib.rs
src/: chafa.rs  main.rs  tui.rs
